--- a/frontend/results.html
+++ b/frontend/results.html
@@ -105,6 +105,18 @@
       transition: background-color 0.3s ease;
     }
 
+    #backtodashboard {
+      padding: 8px 16px;
+      font-size: 16px;
+      cursor: pointer;
+      background-color: #1a73e8;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      transition: background-color 0.3s ease;
+      margin-top: 20px;
+    }
+
     #downloadCsvBtn:hover {
       background-color: #155ab6;
     }
@@ -228,6 +240,10 @@
   <div class="content-wrapper">
     <button id="downloadCsvBtn">Download CSV</button>
     <div id="contactsTableContainer"></div>
+  </div>
+
+  <div class ="content-wrapper" style="text-align: center;">
+    <button id="backtodashboard", onclick="">Back to Dashbord</button>
   </div>
 
   <!-- Chatbot floating button -->
@@ -389,6 +405,12 @@
         sendMessage();
       }
     });
+
+    document.getElementById("backtodashboard").addEventListener("click", () => {
+      // Redirect user by calling the backend redirect endpoint
+      window.location.href = "/results-back";
+    });
+
   </script>
 </body>
 </html>
